[package]
name = "timetrack_jr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
chrono-english = "0.1.7"
clap = { version = "4.0.15", features = ["derive"] }
once_cell = "1.15.0"
rdev = "0.5.1"
regex = "1.6.0"
rusqlite = { version = "0.28.0", features = ["chrono", "bundled", "hooks"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["preserve_order"] }
