[package]
name = "timetrack_jr"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE.txt"
description = "Simple CLI time-tracking utility"
homepage = "https://github.com/hospadar/timetrack_jr/"
repository = "https://github.com/hospadar/timetrack_jr/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "0.1.9"
chrono = "0.4.22"
chrono-english = "0.1.7"
clap = { version = "4.0.15", features = ["derive"] }
fallible-iterator = "0.2.0"
icalendar = "0.13.3"
libsqlite3-sys = "0.25.2"
notify-rust = "4.5.10"
once_cell = "1.15.0"
regex = "1.6.0"
rusqlite = { version = "0.28.0", features = ["bundled",] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["preserve_order"] }

[[bin]]
path = "src/main.rs"

[profile.release]
strip = true
lto = true
